--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -13,6 +13,7 @@
       <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <a mat-list-item [routerLink]="['document']" (click)="left.close()">Document</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
+      <a mat-list-item [routerLink]="['export-data']" (click)="left.close()">Export</a>
       <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
