--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -6,15 +6,16 @@
 <mat-sidenav-container>
   <mat-sidenav #left position="start" class="left-side">
     <mat-nav-list>
+      <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
       <a mat-list-item [routerLink]="['expense']" (click)="left.close()">Expense</a>
       <a mat-list-item [routerLink]="['income']" (click)="left.close()">Income</a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <a mat-list-item [routerLink]="['document']" (click)="left.close()">Document</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
       <a mat-list-item [routerLink]="['export-data']" (click)="left.close()">Export</a>
-      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
+      <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="['exchange-rate']" (click)="left.close()">Exchange rates</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
