--- a/web/src/app/document/component/document-browser/document-browser.component.html
+++ b/web/src/app/document/component/document-browser/document-browser.component.html
@@ -39,7 +39,7 @@
       <mat-label>Currency</mat-label>
       <mat-select formControlName="currency">
         <mat-option [value]="null">[Empty]</mat-option>
-        <mat-option *ngFor="let currency of currencies" [value]="currency">{{currency}}</mat-option>
+        <mat-option *ngFor="let currency of settingsService.settings.currencies" [value]="currency">{{currency}}</mat-option>
       </mat-select>
     </mat-form-field>
   </form>
