--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -1,13 +1,13 @@
 .balances {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em;
+  grid-auto-flow: row;
 }
 
 .expenses {
-  margin-top: 1em;
+  //margin-top: 1em;
 
   div {
-    height: 30em;
+    min-height: 30em;
   }
 }
