--- a/web/src/app/document/component/document-browser/document-browser.component.html
+++ b/web/src/app/document/component/document-browser/document-browser.component.html
@@ -46,7 +46,7 @@
 
 </mat-expansion-panel>
 
-<mat-card>
+<mat-card class="browser">
   <mat-list>
     <mat-list-item *ngFor="let document of filteredDocuments">
       <div matLine class="mat-line-with-menu">
