--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -4,7 +4,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-line-with-menu {
   display: grid!important;
   grid-auto-flow: column;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr min-content;
   align-items: center;
 }
 
