--- a/web/src/app/common/component/amount-label/amount-label.component.scss
+++ b/web/src/app/common/component/amount-label/amount-label.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: grid;
   grid-gap: 0.5em;
-  grid-auto-flow: column;
+  grid-template-columns: min-content min-content;
   align-items: center;
 }
