--- a/web/src/app/document/component/document-label/document-label.component.html
+++ b/web/src/app/document/component/document-label/document-label.component.html
@@ -1,37 +1,37 @@
 <ng-container *ngIf="documentExpense">
   <mat-icon class="expense">arrow_upward</mat-icon>
   <span *ngIf="!hideDate">{{documentExpense.date}}</span>
-  <span *ngIf="!hideAccount">{{documentExpense.accountName}}</span>
-  <amount-label [amount]="documentExpense.amount"></amount-label>
-  <span>{{documentExpense.expenseCategoryName}}</span>
+  <div class="multiline">
+    <div class="line">
+      <amount-label [amount]="documentExpense.amount"></amount-label>
+      <span *ngIf="!hideAccount">{{documentExpense.accountName}}</span>
+    </div>
+    <div class="line">{{documentExpense.expenseCategoryName}}</div>
+  </div>
 </ng-container>
 <ng-container *ngIf="documentIncome">
   <mat-icon class="income">arrow_downward</mat-icon>
   <span *ngIf="!hideDate">{{documentIncome.date}}</span>
-  <span *ngIf="!hideAccount">{{documentIncome.accountName}}</span>
-  <amount-label [amount]="documentIncome.amount"></amount-label>
-  <span>{{documentIncome.incomeCategoryName}}</span>
+  <div class="multiline">
+    <div class="line">
+      <amount-label [amount]="documentIncome.amount"></amount-label>
+      <span *ngIf="!hideAccount">{{documentIncome.accountName}}</span>
+    </div>
+    <div class="line">{{documentIncome.incomeCategoryName}}</div>
+  </div>
 </ng-container>
 <ng-container *ngIf="documentExchange">
   <mat-icon class="exchange">sync</mat-icon>
   <span *ngIf="!hideDate">{{documentExchange.date}}</span>
-  <ng-container *ngIf="!exchangeAmountSame() && !exchangeAccountSame()">
-    <amount-label [amount]="documentExchange.amountFrom"></amount-label>
-    <span>{{documentExchange.accountFromName}}</span>
-    <mat-icon>arrow_right_alt</mat-icon>
-    <amount-label [amount]="documentExchange.amountTo"></amount-label>
-    <span>{{documentExchange.accountToName}}</span>
-  </ng-container>
-  <ng-container *ngIf="exchangeAmountSame()">
-    <amount-label [amount]="documentExchange.amountFrom"></amount-label>
-    <span>{{documentExchange.accountFromName}}</span>
-    <mat-icon>arrow_right_alt</mat-icon>
-    <span>{{documentExchange.accountToName}}</span>
-  </ng-container>
-  <ng-container *ngIf="exchangeAccountSame()">
-    <span>{{documentExchange.accountFromName}}</span>
-    <amount-label [amount]="documentExchange.amountFrom"></amount-label>
-    <mat-icon>arrow_right_alt</mat-icon>
-    <amount-label [amount]="documentExchange.amountTo"></amount-label>
-  </ng-container>
+
+  <div class="multiline">
+    <div class="line">
+      <amount-label [amount]="documentExchange.amountFrom"></amount-label>
+      <span>{{documentExchange.accountFromName}}</span>
+    </div>
+    <div class="line">
+      <amount-label [amount]="documentExchange.amountTo"></amount-label>
+      <span>{{documentExchange.accountToName}}</span>
+    </div>
+  </div>
 </ng-container>
