--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,14 +1,16 @@
-<mat-card *ngFor="let accountBalance of dashboard.balances">
-  <mat-card-subtitle>{{accountBalance.accountName}}</mat-card-subtitle>
-  <mat-card-content>
-    <mat-chip-list>
-      <mat-chip *ngFor="let balance of accountBalance.balances"
-                (click)="viewDocuments(accountBalance.account, balance.currency)">
-        <amount-label [amount]="balance"></amount-label>
-      </mat-chip>
-    </mat-chip-list>
-  </mat-card-content>
-</mat-card>
-<!--<mat-card class="expenses">-->
-<!--  <div #chart></div>-->
-<!--</mat-card>-->
+<ng-container *ngFor="let accountBalance of dashboard.balances">
+  <mat-card *ngIf="accountBalance.balances.length > 0">
+    <mat-card-subtitle>{{accountBalance.accountName}}</mat-card-subtitle>
+    <mat-card-content>
+      <mat-chip-list>
+        <mat-chip *ngFor="let balance of accountBalance.balances"
+                  (click)="viewDocuments(accountBalance.account, balance.currency)">
+          <amount-label [amount]="balance"></amount-label>
+        </mat-chip>
+      </mat-chip-list>
+    </mat-card-content>
+  </mat-card>
+  <!--<mat-card class="expenses">-->
+  <!--  <div #chart></div>-->
+  <!--</mat-card>-->
+</ng-container>
