--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -6,6 +6,9 @@
 <mat-sidenav-container>
   <mat-sidenav #left position="start" class="left-side" [class.left-side-narrow]="wide">
     <mat-nav-list>
+      <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
+      <a mat-list-item [routerLink]="['flow-chart']" (click)="left.close()">Flow chart</a>
+      <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
       <a mat-list-item [routerLink]="['expense']" (click)="left.close()">Expense</a>
       <a mat-list-item [routerLink]="['income']" (click)="left.close()">Income</a>
