--- a/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
+++ b/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
@@ -1,6 +1,9 @@
 <mat-card class="toolbar">
   <div class="title">Import</div>
-  <button mat-icon-button (click)="save()" [disabled]="!form.valid">
+  <button mat-icon-button (click)="save(true)" [disabled]="!form.valid">
+    <mat-icon>system_update_alt</mat-icon>
+  </button>
+  <button mat-icon-button (click)="save(false)" [disabled]="!form.valid">
     <mat-icon>done</mat-icon>
   </button>
   <button mat-icon-button (click)="close()">
