Added improvements to visual components and document browser

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -18,6 +18,8 @@
       <a mat-list-item [routerLink]="['export-data']" (click)="left.close()">Export</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['exchange-rate']" (click)="left.close()">Exchange rates</a>
+      <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content" [class.content-wide]="wide">
