--- a/web/src/app/document/component/document-label/document-label.component.html
+++ b/web/src/app/document/component/document-label/document-label.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="documentExpense">
   <mat-icon class="expense">arrow_upward</mat-icon>
-  <span *ngIf="!hideDate">{{documentExpense.date}}</span>
+  <date-label *ngIf="!hideDate" [date]="documentExpense.date"></date-label>
   <div class="multiline">
     <div class="line">
       <amount-label [amount]="documentExpense.amount"></amount-label>
@@ -11,7 +11,7 @@
 </ng-container>
 <ng-container *ngIf="documentIncome">
   <mat-icon class="income">arrow_downward</mat-icon>
-  <span *ngIf="!hideDate">{{documentIncome.date}}</span>
+  <date-label *ngIf="!hideDate" [date]="documentIncome.date"></date-label>
   <div class="multiline">
     <div class="line">
       <amount-label [amount]="documentIncome.amount"></amount-label>
@@ -22,16 +22,13 @@
 </ng-container>
 <ng-container *ngIf="documentExchange">
   <mat-icon class="exchange">sync</mat-icon>
-  <span *ngIf="!hideDate">{{documentExchange.date}}</span>
-
+  <date-label *ngIf="!hideDate" [date]="documentExchange.date"></date-label>
   <div class="multiline">
-    <div class="line">
-      <amount-label [amount]="documentExchange.amountFrom"></amount-label>
-      <span>{{documentExchange.accountFromName}}</span>
-    </div>
-    <div class="line">
-      <amount-label [amount]="documentExchange.amountTo"></amount-label>
-      <span>{{documentExchange.accountToName}}</span>
-    </div>
+    <amount-label [amount]="documentExchange.amountFrom"></amount-label>
+    <amount-label [amount]="documentExchange.amountTo" *ngIf="documentExchange.amountFrom.value != documentExchange.amountTo.value"></amount-label>
+  </div>
+  <div class="multiline">
+    <span>{{documentExchange.accountFromName}}</span>
+    <span *ngIf="documentExchange.accountFromName != documentExchange.accountToName">{{documentExchange.accountToName}}</span>
   </div>
 </ng-container>
