--- a/web/src/app/reference/component/account-browser/account-browser.component.html
+++ b/web/src/app/reference/component/account-browser/account-browser.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card *ngIf="accounts.length > 0">
   <mat-list>
     <mat-list-item *ngFor="let account of accounts">
       <div matLine class="mat-line-with-menu">
@@ -7,6 +7,8 @@
         <mat-menu #menu>
           <button mat-menu-item (click)="edit(account.id)">Edit</button>
           <button mat-menu-item (click)="delete(account.id)">Remove</button>
+          <button mat-menu-item (click)="usage(account.id)">Usage</button>
+          <button mat-menu-item (click)="deleteDocuments(account.id)">Remove documents</button>
         </mat-menu>
       </div>
     </mat-list-item>
