--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -14,3 +14,7 @@
   <!--  <div #chart></div>-->
   <!--</mat-card>-->
 </ng-container>
+
+<button class="fab" mat-fab (click)="fastExpense()">
+  <mat-icon>add</mat-icon>
+</button>
