--- a/web/src/app/document/component/document-browser/document-browser.component.scss
+++ b/web/src/app/document/component/document-browser/document-browser.component.scss
@@ -4,9 +4,9 @@
 }
 
 form {
-  display: grid;
-  grid-gap: 1em;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .select {
