--- a/web/src/app/reference/component/account-editor/account-editor.component.html
+++ b/web/src/app/reference/component/account-editor/account-editor.component.html
@@ -17,6 +17,8 @@
       <input matInput formControlName="name">
     </mat-form-field>
 
+    <mat-slide-toggle formControlName="track">Track</mat-slide-toggle>
+
   </form>
 
 </mat-card>
