--- a/web/src/app/report/component/flow-chart/flow-chart.component.html
+++ b/web/src/app/report/component/flow-chart/flow-chart.component.html
@@ -35,9 +35,7 @@
 
     <mat-form-field>
       <mat-label>Currency</mat-label>
-      <mat-select formControlName="currency">
-        <mat-option *ngFor="let currency of settingsService.settings.currencies" [value]="currency">{{currency}}</mat-option>
-      </mat-select>
+      <currency-input formControlName="currency"></currency-input>
     </mat-form-field>
 
     <mat-form-field>
