--- a/web/src/app/common/component/amount-input/amount-input.component.html
+++ b/web/src/app/common/component/amount-input/amount-input.component.html
@@ -1,7 +1,4 @@
 <div class="container" [formGroup]="amount" (focusin)="onFocusIn($event)" (focusout)="onFocusOut($event)">
-  <input #value class="simple-input" formControlName="value" type="number" (input)="this.onInput()">
-  <select #currency class="simple-input" formControlName="currency" [class.hide]="!shouldLabelFloat" (change)="this.onInput()">
-    <option [ngValue]="''"></option>
-    <option *ngFor="let currency of settingsService.settings.currencies" [ngValue]="currency">{{currency}}</option>
-  </select>
+  <currency-select formControlName="currency" (click)="onOpenCurrencySelect()"></currency-select>
+  <input class="simple-input" formControlName="value" type="number" (input)="this.onInput()">
 </div>
