--- a/web/src/app/exchangerate/component/exchange-rate-editor/exchange-rate-editor.component.html
+++ b/web/src/app/exchangerate/component/exchange-rate-editor/exchange-rate-editor.component.html
@@ -20,16 +20,12 @@
 
     <mat-form-field>
       <mat-label>From</mat-label>
-      <mat-select formControlName="from">
-        <mat-option *ngFor="let currency of settingsService.settings.currencies" [value]="currency">{{currency}}</mat-option>
-      </mat-select>
+      <currency-input formControlName="from"></currency-input>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>To</mat-label>
-      <mat-select formControlName="to">
-        <mat-option *ngFor="let currency of settingsService.settings.currencies" [value]="currency">{{currency}}</mat-option>
-      </mat-select>
+      <currency-input formControlName="to"></currency-input>
     </mat-form-field>
 
     <mat-form-field>
